[package]
name = "brc-20-experiments-rs"
version = "0.1.0"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["network-programming"]
description = ""
homepage = "https://github.com/veeso-dev/brc-20-experiments-rs"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso-dev/brc-20-experiments-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "brc-20-experiments-rs"
path = "src/main.rs"

[dependencies]
anyhow = "^1"
bitcoin = "^0.31"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
serde_with = "^3"
thiserror = "^1.0"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dev-dependencies]
actix-rt = "^2"
env_logger = "^0.10"
pretty_assertions = "^1"
